[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/gui/black_rect.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/repair.png" type="Texture" id=2]
[ext_resource path="res://src/menuscreens/racepick/RacePick.gd" type="Script" id=3]
[ext_resource path="res://src/menuscreens/racepick/RaceOption.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/mainfont_50.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/menuscreens/racepick/RaceOption.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Autumn__.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/gui/cloud_white_small.png" type="Texture" id=8]
[ext_resource path="res://src/CanvasItemFade.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/mainfont_42.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFont" id=1]
size = 76
outline_size = 4
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
use_filter = true
extra_spacing_top = -200
font_data = ExtResource( 7 )

[node name="RacePick" type="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 929.0
rect_pivot_offset = Vector2( -989.616, 28.802 )
custom_constants/margin_top = 80
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_name = "RacePick"
screen_name = "MenuScreens"
focus_sides = true

[node name="Label" type="Label" parent="."]
margin_top = 80.0
margin_right = 1820.0
margin_bottom = 879.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "DEATH RACE SIGN-UP"
align = 1

[node name="Buttons" type="HBoxContainer" parent="."]
margin_top = 80.0
margin_right = 1820.0
margin_bottom = 879.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="RaceOption" parent="Buttons" instance=ExtResource( 6 )]
margin_left = 135.0
margin_right = 585.0
margin_bottom = 799.0

[node name="RaceOption2" parent="Buttons" instance=ExtResource( 6 )]
margin_bottom = 799.0

[node name="RaceOption3" type="VBoxContainer" parent="Buttons"]
margin_left = 1235.0
margin_right = 1685.0
margin_bottom = 799.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
disabled = true

[node name="Tier" type="Label" parent="Buttons/RaceOption3"]
margin_right = 450.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( -1705.56, -33.7286 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 10 )
text = "Tier III"
align = 1

[node name="Focus" type="ColorRect" parent="Buttons/RaceOption3/Tier"]
visible = false
modulate = Color( 1, 1, 1, 0.4 )
show_behind_parent = true
margin_left = -2.0
margin_top = 53.0
margin_right = 452.0
margin_bottom = 357.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pic" type="TextureRect" parent="Buttons/RaceOption3"]
modulate = Color( 1, 1, 1, 0.4 )
margin_top = 55.0
margin_right = 450.0
margin_bottom = 355.0
texture = ExtResource( 1 )

[node name="Pic" type="TextureRect" parent="Buttons/RaceOption3/Pic"]
modulate = Color( 0.709804, 0.878431, 1, 1 )
margin_left = 160.0
margin_top = 94.0
margin_right = 288.0
margin_bottom = 222.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Buttons/RaceOption3"]
margin_top = 359.0
margin_right = 450.0
margin_bottom = 410.0
custom_fonts/font = ExtResource( 10 )
text = "Under Construction"
align = 1

[node name="List" type="VBoxContainer" parent="Buttons/RaceOption3"]
margin_top = 414.0
margin_right = 450.0
margin_bottom = 414.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Info" type="Control" parent="."]
visible = false
margin_top = 80.0
margin_right = 1820.0
margin_bottom = 879.0
script = ExtResource( 9 )
die_on_end = false
precompleted = true
fade_type = 0

[node name="TextureRect" type="TextureRect" parent="Info"]
modulate = Color( 0.0862745, 0.0941176, 0.101961, 1 )
margin_left = 396.12
margin_top = 156.801
margin_right = 1396.12
margin_bottom = 454.801
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoSignUp" type="Label" parent="Info"]
visible = false
margin_left = 544.564
margin_top = 273.077
margin_right = 1259.56
margin_bottom = 334.077
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
text = "YOU DID NOT SIGN-UP FOR ANY RACE!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
